--- a/force-app/main/default/lwc/propsDemo/propsDemo.html
+++ b/force-app/main/default/lwc/propsDemo/propsDemo.html
@@ -32,6 +32,12 @@
 
 
         <BR />
+
+        counter : {counter}
+        <BR />
+        <BR />
+        <BR />
+
         <div class="slds-var-m-horizontal_small" style="padding:0.5rem;background:#16325c">
             
             <div class="slds-text-color_inverse">
